--- a/projects/shadow/jsb/package.json
+++ b/projects/shadow/jsb/package.json
@@ -3,10 +3,9 @@
         "gfx-common": "tsc -p ../../../script/gfx/common --outDir dist/gfx-common --watch",
         "gfx": "tsc -p ../../../script/gfx/jsb --outDir dist/gfx --watch",
         "loader": "tsc -p ../../../script/loader/jsb --outDir dist/loader --watch",
-        "phys": "tsc -p ../../../script/phys/ammo --outDir dist/phys --watch",
         "boot": "tsc -p ../../../script/boot/jsb --outDir dist/boot --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
         "script": "tsc -p ../script --outDir dist --watch",
-        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run loader\" \"npm run phys\" \"npm run boot\" \"npm run engine\" \"npm run script\""
+        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run loader\" \"npm run boot\" \"npm run engine\" \"npm run script\""
     }
 }
