--- a/projects/shadow/assets/effects/test.yml
+++ b/projects/shadow/assets/effects/test.yml
@@ -1,19 +1,19 @@
 passes:
   - switch: USE_SHADOW_MAP
-    shader: shadowmap
+    shader: ./shaders/shadowmap
     type: shadowmap
     rasterizationState:
       cullMode: FRONT
     depthStencilState:
       depthTestEnable: true
-  - shader: phong
+  - shader: ./shaders/phong
     macros:
       SHADOW_MAP_PCF: 0
     constants:
       albedo: [1, 1, 1, 1]
     depthStencilState:
       depthTestEnable: true
-  - shader: unlit
+  - shader: ./shaders/unlit
     type: down
     constants:
       albedo: [1, 1, 1, 1]
