--- a/projects/spine/script/package.json
+++ b/projects/spine/script/package.json
@@ -1,6 +1,7 @@
 {
   "name": "main",
   "dependencies": {
+    "bundling": "file:../../../script/bundling",
     "engine": "file:../../../script/engine",
     "spine": "file:../../../script/spine"
   }
