--- a/script/engine/package.json
+++ b/script/engine/package.json
@@ -1,7 +1,9 @@
 {
     "name": "engine",
     "dependencies": {
+        "assets": "file:../assets",
         "boot": "file:../boot/declare",
+        "bundling": "file:../bundling",
         "gfx": "file:../gfx/declare",
         "loader": "file:../loader/declare",
         "yaml": "^2.3.2"
