combine root and loader

--- a/script/assets/package.json
+++ b/script/assets/package.json
@@ -1,6 +1,6 @@
 {
     "name": "assets",
     "dependencies": {
-        "loader": "file:../loader/declare"
+        "boot": "file:../boot/declare"
     }
 }
