wx: splash and subpackage

--- a/minigame/project.config.json
+++ b/minigame/project.config.json
@@ -11,7 +11,8 @@
             "disablePlugins": [],
             "outputPath": ""
         },
-        "enhance": true
+        "enhance": true,
+        "packNpmRelationList": []
     },
     "compileType": "game",
     "libVersion": "2.20.1",
