--- a/minigame/package.json
+++ b/minigame/package.json
@@ -10,6 +10,10 @@
         "engine": "tsc -p ../script/engine --outDir ./dist/subpackages/engine/script --module system --watch",
         "spine-core": "rollup -i ../script/spine/node_modules/@esotericsoftware/spine-core/dist/index.js -f system -o ./dist/subpackages/spine/spine-core.js",
         "spine": "tsc -p ../script/spine --outDir ./dist/subpackages/spine --module system --watch",
+        "navigation": "tsc -p ../projects/navigation/script --outDir ./dist/subpackages/projects/navigation/script --module system --watch",
+        "animation": "tsc -p ../projects/animation/script --outDir ./dist/subpackages/projects/animation/script --module system --watch",
+        "shadow": "tsc -p ../projects/shadow/script --outDir ./dist/subpackages/projects/shadow/script --module system --watch",
+        "skin": "tsc -p ../projects/skin/script --outDir ./dist/subpackages/projects/skin/script --module system --watch",
         "skeleton": "tsc -p ../projects/skeleton/script --outDir ./dist/subpackages/projects/skeleton/script --module system --watch",
         "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run engine\" \"npm run script\" \"npm run spine\""
     }
