--- a/minigame/project.config.json
+++ b/minigame/project.config.json
@@ -16,7 +16,7 @@
     },
     "compileType": "game",
     "libVersion": "2.20.1",
-    "appid": "wxd2cb654cd3571106",
+    "appid": "wxaa399bf5c9041a5d",
     "projectname": "quickstart",
     "condition": {},
     "packOptions": {
