--- a/minigame/package.json
+++ b/minigame/package.json
@@ -6,7 +6,7 @@
         "boot": "tsc -p ../script/boot/wx --outDir ./dist/boot --module system --watch",
         "assets": "tsc -p ../script/assets --outDir ./dist/assets --module system --watch",
         "splash": "tsc -p ../script/splash --outDir ./dist/splash/script --module system --watch",
-        "yaml": "rollup -i ../script/engine/node_modules/yaml/browser/index.js -f system -o ./dist/subpackages/engine/yaml.js",
+        "yaml": "rollup --config -i ../script/engine/node_modules/yaml/browser/index.js -f system -o ./dist/subpackages/engine/yaml.js",
         "engine": "tsc -p ../script/engine --outDir ./dist/subpackages/engine/script --module system --watch",
         "spine-core": "rollup -i ../script/spine/node_modules/@esotericsoftware/spine-core/dist/index.js -f system -o ./dist/subpackages/spine/spine-core.js",
         "spine": "tsc -p ../script/spine --outDir ./dist/subpackages/spine --module system --watch",
@@ -20,5 +20,9 @@
         "vehicle": "tsc -p ../projects/vehicle/script --outDir ./dist/subpackages/projects/vehicle/script --module system --watch",
         "cutting2d": "tsc -p ../projects/cutting2d/script --outDir ./dist/subpackages/projects/cutting2d/script --module system --watch",
         "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run engine\" \"npm run script\" \"npm run spine\""
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.23.3",
+        "@rollup/plugin-babel": "^6.0.4"
     }
 }
