--- a/minigame/project.config.json
+++ b/minigame/project.config.json
@@ -2,7 +2,7 @@
     "description": "项目配置文件。",
     "setting": {
         "urlCheck": false,
-        "es6": true,
+        "es6": false,
         "postcss": true,
         "minified": false,
         "newFeature": true,
@@ -11,7 +11,7 @@
             "disablePlugins": [],
             "outputPath": ""
         },
-        "enhance": true,
+        "enhance": false,
         "packNpmRelationList": []
     },
     "compileType": "game",
