--- a/projects/vehicle/jsb/package.json
+++ b/projects/vehicle/jsb/package.json
@@ -2,12 +2,12 @@
     "scripts": {
         "gfx-common": "tsc -p ../../../script/gfx/common --outDir dist/gfx-common --watch",
         "gfx": "tsc -p ../../../script/gfx/jsb --outDir dist/gfx --watch",
-        "loader": "tsc -p ../../../script/loader/jsb --outDir dist/loader --watch",
-        "phys": "tsc -p ../../../script/phys/ammo --outDir dist/phys --watch",
         "boot": "tsc -p ../../../script/boot/jsb --outDir dist/boot --watch",
+        "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
-        "script": "tsc -p ../script --outDir dist --watch",
+        "phys": "tsc -p ../../../script/phys/ammo --outDir dist/phys --watch",
         "physics": "tsc -p ../../../script/physics --outDir dist/physics --watch",
-        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run loader\" \"npm run phys\" \"npm run boot\" \"npm run engine\" \"npm run script\" \"npm run physics\""
+        "script": "tsc -p ../script --outDir dist/script --watch",
+        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run phys\" \"npm run physics\" \"npm run script\""
     }
 }
