--- a/projects/shadow/script/package.json
+++ b/projects/shadow/script/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bundling": "file:../../../script/bundling",
-    "engine": "file:../../../script/engine"
+    "engine": "file:../../../script/engine",
+    "gfx": "file:../../../script/gfx/declare"
   }
 }
