--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "typescript.preferences.importModuleSpecifierEnding": "js",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    "source.organizeImports": "explicit"
   },
   "C_Cpp.autoAddFileAssociations": false,
   "cmake.configureOnOpen": false
