SamplerTextureUniform (+4 squashed commit)
Squashed commit:

[7d4543e] refactor

[98a8e19] refactor

[1814a1b] refactor

[8bb610b] refactor

--- a/projects/shadow/assets/flows/flow.yml
+++ b/projects/shadow/assets/flows/flow.yml
@@ -6,15 +6,19 @@ textures:
     width: 1024
     height: 1024
 uniforms:
-  - name: shadow
   - name: camera
+    binding: 1
   - name: light
-  - name: shadowMap
+    binding: 2
+  - name: shadow
+    binding: 3
+  - name: samplerTexture
     texture: shadowmap
+    binding: 0
 stages:
   - name: shadow
     phases:
-      - pass: shadowmap
+      - pass: shadow
         visibility: ${UP}
     framebuffer:
       depthStencil: shadowmap
