--- a/projects/shadow/assets/effects/test.yml
+++ b/projects/shadow/assets/effects/test.yml
@@ -1,7 +1,7 @@
 passes:
   - switch: USE_SHADOW_MAP
-    shader: ${ENGINE_ASSETS}/shaders/shadowmap
-    type: shadowmap
+    shader: ${ENGINE_ASSETS}/shaders/shadow
+    type: shadow
     rasterizationState:
       cullMode: FRONT
     depthStencilState:
