refactor (+1 squashed commits)
Squashed commits:

[78a36c9] refactor

--- a/native/main/CMakeLists.txt
+++ b/native/main/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SRC_FILES
     base/threading/ThreadPool.cpp
     base/threading/Semaphore.cpp
+    gfx/constants.cpp
     Window.cpp
     Loader.cpp
     sugars/sdlsugar.cpp
