--- a/assets/pipelines/forward.yml
+++ b/assets/pipelines/forward.yml
@@ -1,8 +1,8 @@
 flows:
   - uniforms:
-      - name: camera
+      - type: camera
         binding: 1
-      - name: light
+      - type: light
         binding: 2
     stages:
       - phases:
