--- a/projects/cutting2d/script/package.json
+++ b/projects/cutting2d/script/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bundling": "file:../../../script/bundling",
     "engine": "file:../../../script/engine",
     "gfx": "file:../../../script/gfx/declare"
   }
