--- a/projects/skeleton/script/package.json
+++ b/projects/skeleton/script/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "bundling": "file:../../../script/bundling",
     "engine": "file:../../../script/engine",
+    "flex": "file:../../../script/flex",
     "spine": "file:../../../script/spine"
   }
 }
