Frustum (+1 squashed commits)
Squashed commits:

[fe75fd4f] refactor (+2 squashed commit)

Squashed commit:

[9e0d6a78] refactor

[bea27c84] refactor

--- a/assets/effects/phong.yml
+++ b/assets/effects/phong.yml
@@ -1,6 +1,6 @@
 passes:
   - switch: USE_SHADOW_MAP
-    shader: ../shaders/shadowmap
+    shader: ../shaders/shadow
     type: shadowmap
     rasterizationState:
       cullMode: FRONT
