--- a/projects/shadow/assets/pipelines/test.yml
+++ b/projects/shadow/assets/pipelines/test.yml
@@ -33,3 +33,10 @@ flows:
             visibility: ${UP}
           - pass: default
             visibility: ${DOWN}
+    loops:
+      - stages:
+          - viewport:
+              x: 0
+              y: 0
+              width: 1
+              height: 1
