dynamic shadow map (+1 squashed commits)
Squashed commits:

[3323d957] refactor (+2 squashed commit)

Squashed commit:

[76a0e3eb] refactor

[5dba39ab] refactor

--- a/assets/effects/phong.yml
+++ b/assets/effects/phong.yml
@@ -1,7 +1,7 @@
 passes:
   - switch: USE_SHADOW_MAP
     shader: ../shaders/shadow
-    type: shadowmap
+    type: shadow
     rasterizationState:
       cullMode: FRONT
     depthStencilState:
