--- a/projects/pipeline/assets/pipelines/unlit.yml
+++ b/projects/pipeline/assets/pipelines/unlit.yml
@@ -1,6 +1,9 @@
+ubos:
+  - name: camera
+    type: Camera
 flows:
-  - uniforms:
-      - type: camera
+  - bindings:
+      - ubo: camera
         binding: 1
     stages:
       - name: forward
