refactor (+4 squashed commit)
Squashed commit:

[fa9d3fa4] refactor

[21c41304] refactor

[ef039ab7] refactor

[aceb23dc] refactor

--- a/assets/pipelines/unlit-ms.yml
+++ b/assets/pipelines/unlit-ms.yml
@@ -1,6 +1,10 @@
+ubos:
+  - name: camera
+    type: Camera
+
 flows:
-  - uniforms:
-      - type: camera
+  - bindings:
+      - ubo: camera
         binding: 1
     stages:
       - phases:
