--- a/assets/pipelines/unlit.yml
+++ b/assets/pipelines/unlit.yml
@@ -1,6 +1,10 @@
+ubos:
+  - name: camera
+    type: Camera
+
 flows:
-  - uniforms:
-      - type: camera
+  - bindings:
+      - ubo: camera
         binding: 1
     stages:
       - phases:
