--- a/projects/cutting2d/assets/pipelines/outline.yml
+++ b/projects/cutting2d/assets/pipelines/outline.yml
@@ -3,9 +3,13 @@ textures:
     usage:
       - COLOR
       - SAMPLED
+ubos:
+  - name: camera
+    type: Camera
+
 flows:
-  - uniforms:
-      - type: camera
+  - bindings:
+      - ubo: camera
         binding: 1
     stages:
       - phases:
@@ -19,9 +23,8 @@ flows:
           depthStencil:
             usage:
               - DEPTH_STENCIL
-  - uniforms:
-      - type: samplerTexture
-        texture: color
+  - bindings:
+      - texture: color
         binding: 0
     stages:
       - phases:
