--- a/projects/pipeline/assets/pipelines/unlit.yml
+++ b/projects/pipeline/assets/pipelines/unlit.yml
@@ -1,9 +1,6 @@
-ubos:
-  - name: camera
-    type: Camera
 flows:
   - bindings:
-      - ubo: camera
+      - ubo: Camera
         binding: 1
     stages:
       - name: forward
