--- a/assets/pipelines/unlit.yml
+++ b/assets/pipelines/unlit.yml
@@ -1,10 +1,6 @@
-ubos:
-  - name: camera
-    type: Camera
-
 flows:
   - bindings:
-      - ubo: camera
+      - ubo: Camera
         binding: 1
     stages:
       - phases:
