--- a/projects/shadow/assets/pipelines/csm1.yml
+++ b/projects/shadow/assets/pipelines/csm1.yml
@@ -4,6 +4,12 @@ textures:
       - DEPTH_STENCIL
       - SAMPLED
     extent: [1024, 1024]
+ubos:
+  - type: CSMI
+    num: 1
+  - type: CSM
+    num: 1
+
 flows:
   - bindings:
       - ubo: CSMI
@@ -18,15 +24,6 @@ flows:
           depthStencil: shadowmap
         clears:
           - DEPTH
-    loops:
-      - stages:
-          - viewport: [0, 0, 0.5, 0.5]
-      - stages:
-          - viewport: [0.5, 0, 0.5, 0.5]
-      - stages:
-          - viewport: [0, 0.5, 0.5, 0.5]
-      - stages:
-          - viewport: [0.5, 0.5, 0.5, 0.5]
   - bindings:
       - ubo: Camera
         binding: 1
@@ -39,6 +36,8 @@ flows:
     stages:
       - name: forward
         phases:
+          - pass: csm1
+            visibility: ${WORLD}
           - pass: default
             visibility: ${WORLD}
   - bindings:
