refactor (+2 squashed commit)
Squashed commit:

[2cef4c98] refactor

[7d85c757] refactor

--- a/projects/instancing/assets/pipelines/batching-on.yml
+++ b/projects/instancing/assets/pipelines/batching-on.yml
@@ -13,7 +13,7 @@ flows:
         phases:
           - culling: CSM
             pass: shadow
-            batching: Instanced
+            batching: true
             visibility: ${UP}
         framebuffer:
           depthStencil: shadowmap
@@ -41,7 +41,7 @@ flows:
       - name: forward
         phases:
           - pass: default
-            batching: Instanced
+            batching: true
             visibility: ${WORLD}
   - bindings:
       - ubo: Camera
