gpu instancing done (+2 squashed commit)
Squashed commit:

[50d8ada0] refactor

[4df8a77d] refactor (+1 squashed commits)

Squashed commits:

[7d1107cd] refactor

--- a/projects/instancing/assets/pipelines/batching-off.yml
+++ b/projects/instancing/assets/pipelines/batching-off.yml
@@ -13,7 +13,7 @@ flows:
         phases:
           - culling: CSM
             pass: shadow
-            visibility: ${UP}
+            visibility: ${WORLD}
         framebuffer:
           depthStencil: shadowmap
         clears:
