--- a/projects/instancing/assets/pipelines/batching-on.yml
+++ b/projects/instancing/assets/pipelines/batching-on.yml
@@ -14,7 +14,7 @@ flows:
           - culling: CSM
             pass: shadow
             batching: true
-            visibility: ${UP}
+            visibility: ${WORLD}
         framebuffer:
           depthStencil: shadowmap
         clears:
