--- a/projects/instancing/web/package.json
+++ b/projects/instancing/web/package.json
@@ -5,12 +5,19 @@
         "bastard": "tsc -p ../../../script/bastard --outDir dist/bastard --watch",
         "gfx-common": "tsc -p ../../../script/gfx/common --outDir dist/gfx-common --watch",
         "gfx": "tsc -p ../../../script/gfx/webgl2 --outDir dist/gfx --watch",
+        "gfx:ins": "cd ../../../script/gfx/declare && npm ins && cd ../../../script/gfx/webgl2 && npm ins",
         "boot": "tsc -p ../../../script/boot/web --outDir dist/boot --watch",
+        "boot:ins": "cd ../../../script/boot/declare && npm ins && cd ../../../script/boot/web && npm ins",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
+        "assets:ins": "cd ../../../script/assets && npm ins",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
+        "engine:ins": "cd ../../../script/engine && npm ins",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
+        "flex:ins": "cd ../../../script/flex && npm ins",
         "script": "tsc -p ../script --outDir dist/script --watch",
+        "script:ins": "cd ../script && npm ins",
         "server": "http-server ../../../ -p 8003 -o projects/instancing/web/index.html -c-1",
-        "dev": "concurrently \"npm run bastard\" \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run server\""
+        "dev": "concurrently \"npm run bastard\" \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run server\"",
+        "ins": "npm run gfx:ins && npm run boot:ins && npm run assets:ins && npm run engine:ins && npm run flex:ins && npm run script:ins && npm run yaml"
     }
 }
