upgrade android-project

--- a/native/platforms/android/android-project/app/build.gradle
+++ b/native/platforms/android/android-project/app/build.gradle
@@ -60,7 +60,8 @@ android {
     lintOptions {
         abortOnError false
     }
-    
+    namespace 'org.libsdl.app'
+
     if (buildAsLibrary) {
         libraryVariants.all { variant ->
             variant.outputs.each { output ->
