try VK_EXT_host_image_copy on windows

--- a/native/platforms/android/android-project/app/build.gradle
+++ b/native/platforms/android/android-project/app/build.gradle
@@ -8,6 +8,7 @@ else {
 }
 
 android {
+    ndkVersion "27.1.12297006"
     compileSdkVersion 31
     defaultConfig {
         if (buildAsApplication) {
