--- a/projects/cutting2d/jsb/package.json
+++ b/projects/cutting2d/jsb/package.json
@@ -9,6 +9,8 @@
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
-        "dev": "concurrently \"npm run bastard\" \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run flex\" \"npm run script\""
+        "script:ins": "cd ../script && npm ins",
+        "dev": "concurrently \"npm run bastard\" \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run flex\" \"npm run script\"",
+        "ins": "npm run script:ins && npm run yaml"
     }
 }
