--- a/projects/culling/web/package.json
+++ b/projects/culling/web/package.json
@@ -10,7 +10,9 @@
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
+        "script:ins": "cd ../script && npm ins",
         "server": "http-server ../../../ -p 8003 -o projects/culling/web/index.html -c-1",
-        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run server\""
+        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run server\"",
+        "ins": "npm run script:ins && npm run yaml"
     }
 }
