--- a/projects/skin/web/package.json
+++ b/projects/skin/web/package.json
@@ -10,7 +10,9 @@
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
+        "script:ins": "cd ../script && npm ins",
         "server": "http-server ../../../ -p 8003 -o projects/skin/web/index.html -c-1",
-        "dev": "concurrently \"npm run bastard\" \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run server\""
+        "dev": "concurrently \"npm run bastard\" \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run server\"",
+        "ins": "npm run gfx:ins && npm run boot:ins && npm run assets:ins && npm run engine:ins && npm run flex:ins && npm run script:ins && npm run yaml"
     }
 }
