--- a/projects/vehicle/web/package.json
+++ b/projects/vehicle/web/package.json
@@ -11,8 +11,11 @@
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
         "phys": "tsc -p ../../../script/phys/ammo --outDir dist/phys --watch",
+        "phys:ins": "cd ../../../script/phys/ammo && npm ins",
         "physics": "tsc -p ../../../script/physics --outDir dist/physics --watch",
+        "physics:ins": "cd ../../../script/physics && npm ins",
         "server": "http-server ../../../ -p 8003 -o projects/vehicle/web/index.html -c-1",
-        "dev": "concurrently \"npm run bastard\" \"npm run boot\" \"npm run gfx-common\" \"npm run gfx\" \"npm run assets\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run phys\" \"npm run physics\" \"npm run server\""
+        "dev": "concurrently \"npm run bastard\" \"npm run boot\" \"npm run gfx-common\" \"npm run gfx\" \"npm run assets\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run phys\" \"npm run physics\" \"npm run server\"",
+        "ins": "npm run phys:ins && npm run physics:ins"
     }
 }
