--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     "source.organizeImports": "explicit"
   },
   "C_Cpp.autoAddFileAssociations": false,
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "typescript.preferences.autoImportFileExcludePatterns": [
+    "index.ts"
+  ]
 }
