--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
   "C_Cpp.autoAddFileAssociations": false,
   "cmake.configureOnOpen": false,
   "typescript.preferences.autoImportFileExcludePatterns": [
-    "index.ts"
+    "^./**/index.ts",
+    "^../**/index.ts"
   ]
 }
