gfx: common -> symbolic link "shared"

--- a/script/gfx/webgl2/package.json
+++ b/script/gfx/webgl2/package.json
@@ -1,7 +1,6 @@
 {
   "name": "gfx",
   "dependencies": {
-    "gfx": "file:../declare",
-    "gfx-common": "file:../common"
+    "gfx": "file:../declare"
   }
 }
