--- a/projects/animation/web/package.json
+++ b/projects/animation/web/package.json
@@ -2,7 +2,6 @@
     "type": "module",
     "scripts": {
         "yaml": "rollup -i ../../../script/engine/node_modules/yaml/browser/index.js -o dist/yaml.js",
-        "gfx-common": "tsc -p ../../../script/gfx/common --outDir dist/gfx-common --watch",
         "gfx": "tsc -p ../../../script/gfx/webgl2 --outDir dist/gfx --watch",
         "boot": "tsc -p ../../../script/boot/web --outDir dist/boot --watch",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
@@ -12,7 +11,7 @@
         "script": "tsc -p ../script --outDir dist/script --watch",
         "script:ins": "cd ../script && npm ins",
         "server": "http-server ../../../ -p 8003 -o projects/animation/web/index.html -c-1",
-        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run server\"",
+        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run flex\" \"npm run script\" \"npm run server\"",
         "ins": "npm run script:ins && npm run yaml"
     }
 }
