--- a/projects/skeleton2/jsb/package.json
+++ b/projects/skeleton2/jsb/package.json
@@ -6,9 +6,10 @@
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
         "bastard": "tsc -p ../../../script/bastard --outDir dist/bastard --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
+        "spi": "tsc -p ../../../script/spi/jsb --outDir dist/spi --watch",
         "spine2": "tsc -p ../../../script/spine2 --outDir dist/spine2 --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
-        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run spine2\" \"npm run flex\" \"npm run script\""
+        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run spi\" \"npm run spine2\" \"npm run flex\" \"npm run script\""
     }
 }
