--- a/puttyknife/spi/CMakeLists.txt
+++ b/puttyknife/spi/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(SPINE_C spine-c-4.2 CACHE STRING "spine-c-x.x dir name")
+
 add_library(spi STATIC ./extension.c ./AnimationState.c ./Atlas.c ./Model.c ./Skeleton.c ./SkeletonBinary.c)
 target_include_directories(spi PUBLIC ./include)
 
